--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a{
 }
 
 img {
-    width: 100%;
+    max-width: 100%;
 }
 
 .contenedor {
@@ -61,4 +61,35 @@ h2 {
 
 h3 {
     font-size: 2.4rem;
+}
+
+/*Header*/
+.header {
+    display: flex;
+    justify-content: center;
+}
+
+.header__logo {
+    margin: 3rem 0;
+}
+
+/*Navegación*/
+.navegacion {
+    background-color: var(--primarioOscuro);
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.navegacion__enlace {
+    font-family: var(--fuentePrincipal);
+    color: var(--blanco);
+    font-size: 3rem;
+
+}
+
+.navegacion__enlace--activo, /*Mantiene el enlace tienda en amarillo*/
+.navegacion__enlace:hover {
+    color: var(--secundario);
 }
