--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a{
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
 }
 
 .contenedor {
@@ -125,11 +125,6 @@ h3 {
     padding: 1rem;
 }
 
-.producto__imagen {
-    width: 100%;
-}
-
-
 .producto__nombre {
     font-size: 4rem;
 }
@@ -192,7 +187,6 @@ h3 {
 
 .nosotros__imagen {
     grid-row: 1 / 2;
-    width: 100%;
 }
 @media (min-width: 768px) {
     .nosotros__imagen {
@@ -221,6 +215,57 @@ h3 {
     margin: 0;
 }
 
-.bloque__imagen {
-    width: 100%;
+/**Página del producto**/
+
+.camisa {
+    padding: 2rem;
+}
+
+@media (min-width: 768px) {
+    .camisa {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        column-gap: 2rem;
+    }
+}
+
+.camisa__contenido {
+    text-align: justify;
+}
+
+.formulario {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 2rem;
+}
+
+.formulario__campo {
+    /* border-color: var(--primarioOscuro);
+    border-width: 1rem;
+    border-style: solid; */
+
+    border: 1rem solid var(--primarioOscuro);
+    background-color: var(--primario);
+    color: var(--blanco);
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+    appearance: none;
+    min-width: 50%;
+}
+
+.formulario__submit {
+    background-color: var(--secundario);
+    border: none;
+    font-size: 2rem;
+    font-family: var(--fuentePrincipal);
+    padding: 2rem;
+    transition: background-color .5s ease;
+    grid-column: 1 / 3;
+}
+
+.formulario__submit:hover {
+    font-size: 2.2rem;
+    cursor: pointer;
+    background-color: var(--secundarioOscuro);
 }
